# solstice-solver

./: .gitignore  README.md
cmake/: CMakeLists.txt
src/: ssol.h  ssol_atmosphere.c  ssol_atmosphere_c.h  ssol_brdf.c  ssol_brdf.h  ssol_brdf_composite.c  ssol_brdf_composite.h  ssol_brdf_reflection.c  ssol_brdf_reflection.h  ssol_c.h  ssol_camera.c  ssol_camera.h  ssol_data.c  ssol_device.c  ssol_device_c.h  ssol_distributions.c  ssol_distributions_c.h  ssol_draw.c  ssol_draw.h  ssol_draw_draft.c  ssol_draw_pt.c  ssol_draw_pt.h  ssol_estimator.c  ssol_estimator_c.h  ssol_image.c  ssol_image_c.h  ssol_instance.c  ssol_instance_c.h  ssol_material.c  ssol_material_c.h  ssol_mc_receiver.c  ssol_object.c  ssol_object_c.h  ssol_object_instance.c  ssol_object_instance_c.h  ssol_param_buffer.c  ssol_quadric.c  ssol_quadric_c.h  ssol_ranst_sun_dir.c  ssol_ranst_sun_dir.h  (+55 more)
